# TestCProject

./: CMakeLists.txt
glade/: #MainWindow.glade#  MainWindow.glade
res/: vertex_shader.glslv
src/: main.c  main.h
src/Calculation/: direct.c  direct.h
src/Render/: graph.c  graph.h  shader_program.c  shader_program.h
src/View/: ui.c  ui.h
